update(LvPlan Events): overflow css fix for the LvPlan Events

--- a/public/css/Cis4/CoreCalendarEvents.css
+++ b/public/css/Cis4/CoreCalendarEvents.css
@@ -44,9 +44,9 @@
 .weekPageContainer .lehreinheitEventContent #lehreinheitEventText {
 	display: flex;
 	flex-direction: column;
-	place-content: center space-evenly;
-	flex-wrap: wrap;
 	column-gap: 5px;
+	overflow-y: scroll;
+	min-height:0;
 
 }
 
